[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.14"
indicatif = "0.15.0"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1.13.0", features = ["full"] }
zip-extensions = "0.6.1"
directories = "4.0.1"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1