[package]
name = "mcinstall"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.14"
indicatif = "0.15.0"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1.13.0", features = ["full"] }
zip-extensions = "0.6.1"
directories = "4.0.1"
fs_extra = "1.2.0"
# serde = { version = "1.0", features = ["derive"]}
# serde_json = '1.0'

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1