[package]
name = "mcinstall"
version = "0.3.4"
edition = "2021" # I know this will annoy someone :)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.14"
indicatif = "0.15.0"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1.13.0", features = ["full"] }
zip-extensions = "0.6.1"
directories = "4.0.1"
fs_extra = "1.2.0"
dialoguer = "0.10.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1